--- a/CashCalculator/MainWindow.xaml
+++ b/CashCalculator/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="CashCalculator.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Cash Calculator"
+        Title="Cash Calculator beta 0.1"
         Height="625" Width="420"
         ResizeMode="NoResize"
         WindowStartupLocation="CenterScreen"
