--- a/CashCalculator/Views/DenominationsView.xaml
+++ b/CashCalculator/Views/DenominationsView.xaml
@@ -1,32 +1,28 @@
 <UserControl x:Class="CashCalculator.Views.DenominationsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:models="clr-namespace:CashCalculator.Models">
-    <DataGrid x:Name="DenomsGrid"
-              Style="{StaticResource NiceGrid}"
-              ColumnHeaderStyle="{StaticResource NiceHeader}"
-              CellStyle="{StaticResource NiceCell}"
-              Background="Transparent"
-              AutoGenerateColumns="False"
-              HeadersVisibility="Column"
-              GridLinesVisibility="None"
-              AlternationCount="2"
-              RowHeight="28"
-              FontSize="14"
-              BorderBrush="{StaticResource DataGridBorderBrush}"
-              BorderThickness="1"
-              SelectionMode="Single"
-              SelectionUnit="FullRow"
-              CanUserAddRows="False"
-              PreviewMouseLeftButtonDown="DenomsGrid_PreviewMouseLeftButtonDown">
-        <DataGrid.Columns>
-            <DataGridTextColumn Header="Номинал, ₽"
-                                Binding="{Binding Value}"
-                                IsReadOnly="True"
-                                Width="*"/>
-            <DataGridTextColumn Header="Кол-во"
-                                Binding="{Binding Amount,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
-                                Width="*"/>
-        </DataGrid.Columns>
-    </DataGrid>
+             Background="Transparent">
+    <Border CornerRadius="8"
+            Background="{StaticResource WindowBackgroundBrush}"
+            BorderBrush="{StaticResource DataGridBorderBrush}"
+            BorderThickness="1">
+        <DataGrid x:Name="DenomsGrid"
+                  Style="{StaticResource NiceGrid}"
+                  ColumnHeaderStyle="{StaticResource NiceHeader}"
+                  CellStyle="{StaticResource NiceCell}"
+                  Background="Transparent"
+                  AutoGenerateColumns="False"
+                  CanUserAddRows="False"
+                  PreviewMouseLeftButtonDown="DenomsGrid_PreviewMouseLeftButtonDown">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Номинал, ₽"
+                                    Binding="{Binding Value}"
+                                    IsReadOnly="True"
+                                    Width="*"/>
+                <DataGridTextColumn Header="Кол-во"
+                                    Binding="{Binding Amount, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                    Width="*"/>
+            </DataGrid.Columns>
+        </DataGrid>
+    </Border>
 </UserControl>
