--- a/CashCalculator/Views/SummaryView.xaml
+++ b/CashCalculator/Views/SummaryView.xaml
@@ -1,21 +1,17 @@
 <UserControl x:Class="CashCalculator.Views.SummaryView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:models="clr-namespace:CashCalculator.Models">
-    <Grid>
+             Background="Transparent">
+    <Border CornerRadius="8"
+            Background="{StaticResource WindowBackgroundBrush}"
+            BorderBrush="{StaticResource DataGridBorderBrush}"
+            BorderThickness="1">
         <DataGrid x:Name="SummaryGrid"
+                  Style="{StaticResource NiceGrid}"
+                  ColumnHeaderStyle="{StaticResource NiceHeader}"
+                  CellStyle="{StaticResource NiceCell}"
+                  Background="Transparent"
                   AutoGenerateColumns="False"
-                  HeadersVisibility="Column"
-                  GridLinesVisibility="None"
-                  AlternationCount="2"
-                  RowBackground="{StaticResource DataGridRowBackgroundBrush}"
-                  AlternatingRowBackground="{StaticResource DataGridAlternationRowBackgroundBrush}"
-                  RowHeight="28"
-                  FontSize="14"
-                  BorderBrush="{StaticResource DataGridBorderBrush}"
-                  BorderThickness="1"
-                  SelectionMode="Single"
-                  SelectionUnit="FullRow"
                   CanUserAddRows="False"
                   PreviewMouseLeftButtonDown="SummaryGrid_PreviewMouseLeftButtonDown">
             <DataGrid.Columns>
@@ -30,12 +26,12 @@
                 </DataGridTemplateColumn>
                 <DataGridTextColumn Header="Итого, ₽"
                                     Binding="{Binding Description}"
-                                    IsReadOnly="True"
-                                    Width="0.8*"/>
+                                    Width="0.8*"
+                                    IsReadOnly="True"/>
                 <DataGridTextColumn Header=""
                                     Binding="{Binding Value, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                     Width="*"/>
             </DataGrid.Columns>
         </DataGrid>
-    </Grid>
+    </Border>
 </UserControl>
